--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@
         }
         
         .container {
-            max-width: 80%;
+            max-width: 210mm;
             margin: 0 auto;
             background: white;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
